fix layout on mobile

--- a/src/module/page/exchange/style/openOrder.scss
+++ b/src/module/page/exchange/style/openOrder.scss
@@ -38,6 +38,10 @@
     width: 100px;
     padding: 0 10px;
     font-size: 12px;
+
+    & input {
+      padding: 0 10px;
+    }
   }
 }
 
@@ -88,8 +92,10 @@
   .search {
     &-input {
       font-size: 10px;
-      width: 50px;
-      padding-left: 5px;
+      width: 74px;
+      & input {
+        padding: 0;
+      }
     }
   }
 }
