--- a/src/style/antd.scss
+++ b/src/style/antd.scss
@@ -86,13 +86,13 @@ $dark-gray: #1F2538;
   border: 1px solid #6E7793;
   color: $primary_light_color;
   border-radius: 15px;
-  width: 105px;
+  //width: 105px;
   padding: 0 3px;
 
   & input {
     color: $primary_light_color;
     font-size: 12px;
-    padding: 0 0 0 10px;
+    //padding: 0 0 0 10px;
   }
 }
 
