--- a/src/style/typography.scss
+++ b/src/style/typography.scss
@@ -23,6 +23,10 @@
   font-size: 100%;
 }
 
+.text-size-md {
+  font-size: 14px;
+}
+
 .text-red {
   color: $red_color
 }
